--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="js/app.js"></script>
 <script>
-    alert('Hola Mundo');
+    /*alert('Hola Mundo');
+
+    var nombre = 'Gabriel'
+    console.log('El nombre es', nombre)*/
+
 </script>
 </head>
 <body>
